# CPSC5210-Team2-DrawingGame

./: .env  .gitignore  .gitmodules  Pipfile  README.md  app.py  buildTestSuite.ps1  db.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_all.py  test_get_drawing.py  test_page_not_found.py  tests.py
.github/workflows/: buildTestSuite.yml
UI_Tests/: test_ui_modules.py
__tests__/: editing.ts
tests/: conftest.py  test_app.py  test_need_browser.py  test_ui_automation.py
